--- a/pychess/templates/pychess/login.html
+++ b/pychess/templates/pychess/login.html
@@ -1,29 +1,41 @@
+{% extends "pychess/layout.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block title %}
+pyChess Login
+{% endblock %}
 
-<head>
-    <title>Pychess Login</title>
-    <link rel="stylesheet" href="{% static 'pychess/styles.css' %}">
-</head>
-<body>
-    {% if message %}
-    <div style="color:white; background-color: red;">
-        {{ message }}
-    </div>
-    {% endif %}
 
-    <div class="loginForm">
-        <form action="{% url 'login' %}" method="POST">
-            <div style="color:white">Username:</div>
-            <input class="loginInput" type="text" name="username"><br>
-            <div style="color:white">Password:</div>
-            <input class="loginInput" type="password" name="password"><br>
-            <input class="loginInput" type="submit" value="Login">
-            {% csrf_token %}
-        </form>
-        <a href="{% url 'index' %}">Return Home</a>
+{% block body %}
+    <div class="centeredContent" style="align-items:start;">
+        <div style="display:flex; flex-direction: column;">
+
+            {% if message %}
+                <div style="color:white; background-color: red;">
+                    {{ message }}
+                </div>
+            {% endif %}
+
+            <div>
+                <h1>Welcome to pyChess!</h1>
+            </div>
+
+            <div class="loginForm">
+                <form action="{% url 'login' %}" method="POST">
+                    <div style="color:white">Username:</div>
+                    <input class="loginInput" type="text" name="username"><br>
+                    <br>
+                    <div style="color:white">Password:</div>
+                    <input class="loginInput" type="password" name="password"><br>
+                    <br>
+                    <input class="loginInput" type="submit" value="Login">
+                    {% csrf_token %}
+                </form>
+                <br>
+                <div>Don't have an account? <a href="{% url 'register' %}">Register Here.</a></div>
+            </div>
+
+        </div>
     </div>
-</body>
-</html>
+{% endblock %}
