Updated error message CSS
Made sure error pop-ups on the login and register page display correctly. Made them look nice and made sure they didn't disrupt the flow of the rest of the page.

--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -106,6 +106,15 @@ img {
     text-align:center;
 }
 
+.errorMessage {
+    color:red; 
+    background-color: rgb(255, 140, 140); 
+    padding:10px; 
+    border: solid; 
+    border-color:red; 
+    border-radius: 10px; 
+    text-align: center;
+}
 
 
 
