--- a/pychess/templates/pychess/register.html
+++ b/pychess/templates/pychess/register.html
@@ -12,7 +12,7 @@ Register for pyChess
         <div style="display:flex; flex-direction: column;">
 
             {% if message %}
-                <div style="color:white; background-color: red;">
+                <div class="errorMessage">
                     {{ message }}
                 </div>
             {% endif %}
