implemented spectate mode

--- a/pychess/templates/pychess/localGame.html
+++ b/pychess/templates/pychess/localGame.html
@@ -321,7 +321,7 @@ Play Chess!
                             if (winCondition['message'] === "checkmate")
                             {
                                 let winner = "";
-                                if (turn === 'light')
+                                if (playerTurn === 'light')
                                     winner = "Dark";
                                 else
                                     winner = 'Light';
