--- a/pychess/templates/pychess/networkGame.html
+++ b/pychess/templates/pychess/networkGame.html
@@ -22,7 +22,7 @@ Play Chess!
                     </div>
                     <div class="infoMid">
                         <div>Playing as <span id=color></span></div>
-                        <div>Playing against: <span id=opponent></span></div>
+                        <div style="max-width:75%; overflow:hidden; text-align: center; text-overflow: ellipsis; text-wrap: nowrap;">Playing against: <span id=opponent></span></div>
                         <div>Room code: {{ roomCode }}</div>
                     </div>
                     <div class="infoBottomNetwork" id="moveList">
