--- a/pychess/templates/pychess/reviewGame.html
+++ b/pychess/templates/pychess/reviewGame.html
@@ -20,7 +20,7 @@ Review
             </div>
             <div class="infoMid">
                 <div>Reviewing game: </div>
-                <div><span id="p1"></span> vs <span id="p2"></span></div>
+                <div style="max-width:75%; overflow:hidden; text-align: center; text-overflow: ellipsis; text-wrap: nowrap;"><span id="p1"></span> vs <span id="p2"></span></div>
                 <div>Room code: <span id="roomCode"></span></div>
             </div>
             <div class="infoBottomNetwork" style="flex-basis:60%" id="moveList">
