--- a/pychess/templates/pychess/spectateGame.html
+++ b/pychess/templates/pychess/spectateGame.html
@@ -21,7 +21,7 @@ Spectate
             </div>
             <div class="infoMid">
                 <div>Now spectating: </div>
-                <div><span id="p1"></span> vs <span id="p2"></span></div>
+                <div style="max-width:75%; overflow:hidden; text-align: center; text-overflow: ellipsis; text-wrap: nowrap;"><span id="p1"></span> vs <span id="p2"></span></div>
                 <div>Room code: <span id="roomCode"></span></div>
             </div>
             <div class="infoBottomNetwork" id="moveList">
