--- a/pychess/templates/pychess/play.html
+++ b/pychess/templates/pychess/play.html
@@ -8,7 +8,11 @@ Play chess!
 
 {% block body %}
     
-
+    {% if message %}
+        <div class="errorMessage">
+            <strong>{{ message }}</strong>
+        </div>
+    {% endif %}
 
     <div class="centeredContent" style="align-items: start; font-size:36px;" id="main">
 
@@ -53,15 +57,11 @@ Play chess!
     <script>
         document.querySelector("#join").addEventListener('click', joinGame);
         document.querySelector("#back").addEventListener('click', back)
-        let errorMessage = document.querySelector("#error");
 
         function joinGame()
         {
             document.querySelector("#links").style.display = "none";
             document.querySelector("#form").style.display = "flex";
-
-            if(errorMessage != null)
-                errorMessage.style.display = "none";
         }
 
         function back()
