--- a/pychess/templates/pychess/register.html
+++ b/pychess/templates/pychess/register.html
@@ -27,7 +27,7 @@ Register for pyChess
                     <input class="loginInput" type="text" name="username" placeholder="Username"><br>
                     <br>
                     <div style="color:white">Email Address:</div>
-                    <input class="loginInput" type="text" name="email" placeholder="Email Address"><br>
+                    <input class="loginInput" type="text" name="email" placeholder="Email (Optional)"><br>
                     <br>
                     <div style="color:white">Password:</div>
                     <input class="loginInput" type="password" name="password" placeholder="Password"><br>
